--- a/TD4/index.html
+++ b/TD4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
